// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntensitySparkline Snapshot Tests should match snapshot with all intensity markers 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 Q 8.666666666666668,26.4 13.333333333333334,24.48 Q 18,24.48 22.666666666666668,21.216 Q 27.333333333333336,21.216 32,19.891200000000005 Q 36.66666666666667,19.891200000000005 41.333333333333336,20.883840000000003 Q 46,20.883840000000003 50.66666666666667,21.578688000000003 Q 55.333333333333336,21.578688000000003 60,22.065081600000003 Q 64.66666666666667,22.065081600000003 69.33333333333334,22.405557120000005 Q 74,22.405557120000005 78.66666666666667,22.643889984000005 Q 83.33333333333334,22.643889984000005 88,22.810722988800002 Q 92.66666666666667,22.810722988800002 97.33333333333334,22.927506092160005 Q 102,22.927506092160005 106.66666666666667,23.009254264512002 Q 111.33333333333334,23.009254264512002 116,23.066477985158404"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={32}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={41.333333333333336}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with custom color 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 Q 8.666666666666668,26.4 13.333333333333334,24.48 Q 18,24.48 22.666666666666668,21.216 Q 27.333333333333336,21.216 32,18.9312 Q 36.66666666666667,18.9312 41.333333333333336,17.33184 Q 46,17.33184 50.66666666666667,16.212288 Q 55.333333333333336,16.212288 60,15.4286016 Q 64.66666666666667,15.4286016 69.33333333333334,14.880021120000002 Q 74,14.880021120000002 78.66666666666667,14.496014784000003 Q 83.33333333333334,14.496014784000003 88,14.227210348800003 Q 92.66666666666667,14.227210348800003 97.33333333333334,14.039047244160002 Q 102,14.039047244160002 106.66666666666667,13.907333070912 Q 111.33333333333334,13.907333070912 116,13.815133149638399"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294929259,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with typical intensity pattern 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 Q 8.666666666666668,26.4 13.333333333333334,24.48 Q 18,24.48 22.666666666666668,21.216 Q 27.333333333333336,21.216 32,17.011200000000002 Q 36.66666666666667,17.011200000000002 41.333333333333336,15.027840000000005 Q 46,15.027840000000005 50.66666666666667,15.559488000000005 Q 55.333333333333336,15.559488000000005 60,17.851641600000004 Q 64.66666666666667,17.851641600000004 69.33333333333334,19.456149120000003 Q 74,19.456149120000003 78.66666666666667,20.579304384000004 Q 83.33333333333334,20.579304384000004 88,21.365513068800002 Q 92.66666666666667,21.365513068800002 97.33333333333334,21.915859148160003 Q 102,21.915859148160003 106.66666666666667,22.301101403712003 Q 111.33333333333334,22.301101403712003 116,22.5707709825984"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={32}
        cy={7.199999999999999}
        fill={
          {
            "payload": 4293673082,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={41.333333333333336}
        cy={10.399999999999999}
        fill={
          {
            "payload": 4291176488,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={50.66666666666667}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
